# rust-cargo-lock-corruption

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  requirements.txt  run-tests.sh  solution.sh  task.yaml
src/: main.rs
tests/: test_outputs.py
