[package]
name = "financial-processor"
version = "0.1.0"
edition = "2021"
rust-version = "1.60.0"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = "0.7.7"
serde = "1.0.150"
serde_json = "1.0.91"
uuid = "1.2.0"
chrono = { version = "0.4.23", features = ["serde"] }
anyhow = "1.0.68"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
# Yanked crate - needs replacement
time = "0.1.45"
# Incompatible versions
hyper = "0.14.23"
tower = "0.4.12"
# Missing required features
clap = "4.0.29"
